app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  height: 100%;
  background-color: #10151C;
}

::-webkit-scrollbar {
  height: 10px;
  width: 10px;
}
::-webkit-scrollbar-track {
  background: #10151C;
}
::-webkit-scrollbar-thumb {
  background: #263242;
  border-radius: 999px;
}
::-webkit-scrollbar-thumb:hover {
  background: #3a4a5f;
}

